--- a/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
@@ -1,12 +1,12 @@
 <div class="main-container position-relative">
   <div class="page-title d-flex justify-content-md-between justify-content-end">
     <div class="xs-title">
-      <span class="mr-2">Schedule Management</span>
+      <span class="mr-2">Statement Schedule Management</span>
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
       <button class="btn-add btn-cust" id="btnAddUsers" (click)="navigateToScheduleAdd()"
-              *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Create' }))">
+        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Create' }))">
         <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Schedule
       </button>
 
@@ -17,90 +17,96 @@
     <div class="card-body">
       <div class="d-flex justify-content-center mb-4">
         <div class="pagination-mat position-relative">
-          <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
+          <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]" [showFirstLastButtons]="true"
+            [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
 
-      <div *ngIf='scheduleList!=undefined'>
-        <div class="widget-area-grid padding-0" *ngIf='scheduleList.length!=0'>
-          <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
-  
-            <!-- Position Column -->
-            <ng-container matColumnDef="name">
-              <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-              <td mat-cell *matCellDef="let element">{{element.Name}}</td>
-            </ng-container>
-  
-            <!-- Name Column -->
-            <ng-container matColumnDef="statement">
-              <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Definition </th>
-              <td mat-cell *matCellDef="let element"> {{element.Statement.Name}} </td>
-            </ng-container>
-  
-            <!-- Weight Column -->
-            <ng-container matColumnDef="startDate">
-              <th class="width10 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-              <td mat-cell *matCellDef="let element"> {{element.StartDate  | date:DataFormat}}</td>
-            </ng-container>
-  
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="endDate">
-              <th class="width10 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
-              <td mat-cell *matCellDef="let element">
-                <span *ngIf='element.EndDate!="0001-01-01T00:00:00"'> {{element.EndDate  | date:DataFormat}}</span>
-                <span *ngIf='element.EndDate=="0001-01-01T00:00:00"'> NA </span>
-              </td>
-            </ng-container>
-  
-            <ng-container matColumnDef="DayOfMonth">
-              <th class="width10 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Day of Month </th>
-              <td mat-cell *matCellDef="let element"> 
-                <span *ngIf='element.DayOfMonth!=0'>{{element.DayOfMonth}}</span>
-                <span *ngIf='element.DayOfMonth==0'> NA </span>
-              </td>
-            </ng-container>
+      <div class="widget-area-grid padding-0">
+        <table class="table-cust mat-table">
 
-            <ng-container matColumnDef="NoOfOccurrence">
-              <th class="width13 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> No Of Occurrences </th>
-              <td mat-cell *matCellDef="let element"> 
-                <span *ngIf='element.NoOfOccurrences!=null'>{{element.NoOfOccurrences}}</span>
-                <span *ngIf='element.NoOfOccurrences==null'> NA </span>
-              </td>
-            </ng-container>
-  
-            <ng-container matColumnDef="actions">
-              <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
-              <td mat-cell *matCellDef="let element">
-                <div class="action-btns btn-tbl-action">
-                  <button type="button" id="btnViewSchedule" title="View" (click)="navigateToScheduleView(element)"
-                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'View' }))">
-                    <span class="fa fa-file-text-o"></span>
-                  </button>
-                  <button type="button" id="btnUpdateSchedule" title="Update" [disabled]="!element.IsActive"  (click)="navigateToScheduleEdit(element)"
-                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))">
-                    <span class="fa fa-pencil-square-o"></span>
-                  </button>
-                  <button type="button" id="btnDeleteSchedule" (click)="deleteSchedule(element)"
-                          *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Delete' }))">
-                    <span class="fa fa-trash-o"></span>
-                  </button>
-                  <button type="button" title="History" id="btnHistory" (click)="navigateToScheduleHistory(element)" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'View' }))"><span class="fa fa-history"></span></button>
-                  <button type="button" (click)="activeDeactiveSchedule(element)" title="Deactivate" *ngIf="element.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))"><span class="fa fa-toggle-on text-success"></span></button>
-                  <button type="button" (click)="activeDeactiveSchedule(element)" title="Activate" *ngIf="!element.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))"><span class="fa fa-toggle-off text-success"></span></button>
 
-                </div>
-              </td>
+          <thead role="rowgroup">
+            <!---->
+            <tr class="mat-header-row ng-star-inserted" role="row">
+              <!---->
+              <th class="width12 ip-w-20 padding_bottom_15">Name</th>
+              <th class="width20 ip-w-25 padding_bottom_15">Statement Defination</th>
+              <th class="width8 ip-w-15 padding_bottom_15">Start Date</th>
+              <th class="width8 ip-w-15 padding_bottom_15">End Date</th>
+              <th class="width5 ip-w-15 padding_bottom_15">No Of Occurrences</th>
+              <th class="width10 ip-w-25 padding_bottom_15"> Actions </th>
+            </tr>
+          </thead>
+          <tbody>
+            <ng-container *ngFor="let item of array">
+              <tr class="mat-row ng-star-inserted padding_bottom_15">
+                <td
+                  class="mat-cell cdk-column-name mat-column-name ng-star-inserted font-weight-bold padding_bottom_8 padding_top_8"
+                  colspan="7">
+                  {{ item.ProductName }}</td>
+              </tr>
+
+              <tr class="mat-row ng-star-inserted" *ngFor="let childItem of item.ProductBatches">
+                <td class="mat-cell cdk-column-name mat-column-name ng-star-inserted padding_bottom_8 padding_top_8"
+                  title="{{childItem.ScheduleNameByUser}}"> {{ childItem.ScheduleNameByUser }}</td>
+                <td
+                  class="mat-cell cdk-column-statement mat-column-statement ng-star-inserted padding_bottom_8 padding_top_8"
+                  title="{{childItem.StatementName}}"> {{ childItem.StatementName }}
+                </td>
+                <td
+                  class="mat-cell cdk-column-startDate mat-column-startDate ng-star-inserted padding_bottom_8 padding_top_8">
+                  <span *ngIf='childItem.StartDate != null && childItem.StartDate != "0001-01-01T00:00:00"'>
+                    {{childItem.StartDate | date:DataFormat}}</span>
+                  <span *ngIf='childItem.StartDate==null || childItem.StartDate=="0001-01-01T00:00:00"'> NA </span>
+                </td>
+                <td
+                  class="mat-cell cdk-column-endDate mat-column-endDate ng-star-inserted padding_bottom_8 padding_top_8">
+                  <span
+                    *ngIf='childItem.EndDateForDisplay != null && childItem.EndDateForDisplay != "0001-01-01T00:00:00"'>
+                    {{childItem.EndDateForDisplay | date:DataFormat}}</span>
+                  <span *ngIf='childItem.EndDateForDisplay==null || childItem.EndDateForDisplay=="0001-01-01T00:00:00"'>
+                    NA </span>
+                </td>
+                <td
+                  class="mat-cell cdk-column-NoOfOccurrence mat-column-NoOfOccurrence ng-star-inserted padding_bottom_8 padding_top_8">
+                  <span *ngIf='childItem.NoOfOccuranceForDisplay != null && childItem.NoOfOccuranceForDisplay != 0'>
+                    {{childItem.NoOfOccuranceForDisplay }}</span>
+                  <span *ngIf='childItem.NoOfOccuranceForDisplay == null || childItem.NoOfOccuranceForDisplay == 0'> NA
+                  </span>
+                </td>
+                <td
+                  class="mat-cell cdk-column-actions mat-column-actions ng-star-inserted padding_bottom_8 padding_top_8 ">
+                  <div class="action-btns btn-tbl-action">
+                    <button type="button" id="btnViewSchedule" title="View" (click)="navigateToScheduleView(childItem)"
+                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'View' }))">
+                      <span class="fa fa-file-text-o"></span>
+                    </button>
+                    <button type="button" id="btnUpdateSchedule" title="Update" [disabled]="!childItem.IsActive"
+                      (click)="navigateToScheduleEdit(childItem)"
+                      *ngIf="childItem.IsDataReady == false && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))">
+                      <span class="fa fa-pencil-square-o"></span>
+                    </button>
+                    <button type="button" id="btnDeleteSchedule" title="Delete" (click)="deleteSchedule(childItem)"
+                      *ngIf="childItem.IsDeleteButtonVisible && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Delete' }))">
+                      <span class="fa fa-trash-o"></span>
+                    </button>
+                    <button type="button" id="btnHistory" title="History" (click)="navigateToScheduleHistory(childItem)"
+                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'View' }))"><span
+                        class="fa fa-history"></span></button>
+                    <button type="button" (click)="activeDeactiveSchedule(childItem)" title="Deactivate"
+                      *ngIf="childItem.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))"><span
+                        class="fa fa-toggle-on text-success"></span></button>
+                    <button type="button" (click)="activeDeactiveSchedule(childItem)" title="Activate"
+                      *ngIf="!childItem.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))"><span
+                        class="fa fa-toggle-off text-success"></span></button>
+                  </div>
+                </td>
+              </tr>
             </ng-container>
-  
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-        </div>
-        <div class="widget-area-grid padding-0 text-center" *ngIf='scheduleList.length==0'>
-          No record found
-        </div>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
@@ -123,7 +129,7 @@
           <label>Start Date</label>
           <div class="position-relative">
             <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterStartDate"
-                   placeholder="Please select start date" readonly (ngModelChange)="onFilterDateChange($event)">
+              placeholder="Please select start date" readonly (ngModelChange)="onFilterDateChange($event)">
             <span [owlDateTimeTrigger]="dt" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
@@ -137,7 +143,7 @@
           <label>End Date</label>
           <div class="position-relative">
             <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterEndDate"
-                   placeholder="Please select end date" readonly (ngModelChange)="onFilterDateChange($event)">
+              placeholder="Please select end date" readonly (ngModelChange)="onFilterDateChange($event)">
             <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
@@ -147,12 +153,21 @@
             {{filterToDateErrorMessage}}
           </div>
         </div>
+        <div class="form-group">
+          <label>Product</label>
+          <div class="position-relative">
+            <select formControlName="filterProductName" class="form-control">
+              <option [value]="'0'" [selected]="true">Select Product</option>
+              <option *ngFor="let sd of productList" [value]="sd.Id">{{ sd.Name }}</option>
+            </select>
+          </div>
+        </div>
       </div>
-      <!--[ngClass]="filterClass"-->
       <div class="filter-footer">
         <ul class="nav">
           <li class="nav-item width33" title="Search">
-            <button class="btn-footer-fill btn-block rounded-0 height100" [disabled]="filterToDateError || filterFromDateError" (click)="searchScheduleRecordFilter('search')">
+            <button class="btn-footer-fill btn-block rounded-0 height100"
+              [disabled]="filterToDateError || filterFromDateError" (click)="searchScheduleRecordFilter('search')">
               <span class="fa fa-check"></span>
             </button>
           </li>
@@ -169,8 +184,7 @@
         </ul>
       </div>
     </div>
-    </form>
+  </form>
 </div>
 
 <div class="overlay" [ngClass]="!isFilter? 'hide':'show'"></div>
-
