Resolved the issues of statement creation

--- a/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
+++ b/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
@@ -98,7 +98,7 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-          <img src="assets/images/dummy.PNG" />
+          <!--<img src="assets/images/dummy.PNG" />-->
         </div>
       </div>
     </div>
