Resolved the console errors  and runtime errors from the schedule pages

--- a/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
@@ -15,11 +15,13 @@
         </button>
       </div>
     </div>
-    <div class="card-body" id="collapseDetails" [ngbCollapse]="isCollapsedDetails">
+    <div class="card-body" id="collapseDetails" [ngbCollapse]="isCollapsedDetails"
+         *ngIf="scheduleRecord != null && scheduleRecord.ProductBatches != null && scheduleRecord.ProductBatches.length > 0">
       <div class="row form-group">
         <div class="col-md-4 col-lg-4">
           <label id="lblName" for="inputRoleName">Name</label>
-          <div>{{ scheduleRecord.ProductBatches[0].ScheduleNameByUser }}</div>
+          <div *ngIf="scheduleRecord != null && scheduleRecord.ProductBatches != null && scheduleRecord.ProductBatches.length > 0">
+          {{ scheduleRecord.ProductBatches[0].ScheduleNameByUser }}</div>
         </div>
         <div class="col-md-4 col-lg-4">
           <label id="lblTemplate" for="inputRoleName">Statement Definition</label>
