Resolved setting section errors

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -12,7 +12,7 @@
     <button class="btn-footer-fill mt-2 mr-2" id="btnPreview" title="Preview" [disabled]="isMasterSaveBtnDisabled" (click)="pageDesignPreview()"> Preview</button>
     <button class="btn-footer-fill mt-2 mr-2" id="btnPrev" title="Previous" [disabled]="isMasterSaveBtnDisabled" (click)="prevBtnClicked()"> Prev</button>
     <button class="btn-footer-fill mt-2 mr-2" id="btnSave" title="Save" [disabled]="isMasterSaveBtnDisabled" (click)="OnSaveBtnClicked()"> Save</button>
-    <button class="btn-footer-outline mt-2" id="btnCancel" title="Cancel" (click)="backClicked()"> Cancel </button>
+    <button class="btn-footer-outline mt-2" id="btnCancel" title="Cancel" (click)="backClicked()"> Cancel ll</button>
   </div>
   <div class="float-right pr-2 d-md-none">
     <!-- <span class="fa fa- xs-position1 d-md-none" (click)="OnSaveBtnClicked()"></span> -->
@@ -31,7 +31,7 @@
                   'fa-address-card-o' : widget.WidgetName == 'AccountInformation' || widget.WidgetName == 'CustomerAddressDetails',
                   'fa-cc fa-lg': widget.WidgetName == 'ClientContactDetails',
                   'fa-trophy fa-lg': widget.WidgetName == 'GreenbacksTotalRewardPoints',
-                  'fa-image fa-lg' : widget.WidgetName == 'Image',
+                  'icon-imageWidget' : widget.WidgetName == 'Image',
                   'icon-videoWidget' : widget.WidgetName == 'Video',
                   'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'Summary' || widget.WidgetName == 'BreakdownOfInvestmentAccounts' || widget.WidgetName == 'WealthBreakdownOfInvestmentAccounts' || widget.WidgetName == 'PersonalLoanDetail' || widget.WidgetName == 'PersonalLoanTotalAmountDetail' || widget.WidgetName == 'HomeLoanTotalAmountDetail' || widget.WidgetName == 'AccountSummary' || widget.WidgetName == 'WealthHomeLoanTotalAmountDetail' || widget.WidgetName == 'MCAAccountSummary'|| widget.WidgetName == 'WealthMCAAccountSummary' ||  widget.WidgetName == 'CorporateSaverTableTotal' ,
                   'fa-bell-o' : widget.WidgetName == 'ReminderaAndRecommendation' || widget.WidgetName == 'SpecialMessage' || widget.WidgetName == 'PortfolioReminders',
@@ -68,7 +68,8 @@
                   'fa-repeat' : widget.WidgetName == 'HomeLoanInstalment' || widget.WidgetName == 'WealthHomeLoanInstalment',
                   'fa-bar-chart' : widget.WidgetName == 'MCAVATAnalysis' || widget.WidgetName == 'WealthMCAVATAnalysis'
               }">
-          </span><span class="nav-title text-truncate"> {{widget.DisplayName}} </span>
+          </span><span class="nav-title text-truncate" title="{{ widget.DisplayName }}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 100px"> {{widget.DisplayName}} </span>
+
         </a>
       </li>
     </ul>
